Fix text overflow.

--- a/src/app/components/json-viewer/assets/less/json-viewer-tree.less
+++ b/src/app/components/json-viewer/assets/less/json-viewer-tree.less
@@ -28,8 +28,6 @@
             font-size: 0.5rem;
             padding: 2px 0.6rem 0 0.1rem;
             text-align: start;
-            text-overflow: ellipsis;
-            overflow: hidden;
 
             .JsonViewerTreeItemLabel {
                 display: flex;
@@ -50,6 +48,11 @@
                     user-select: none;
                     margin: 0 0.2rem;
                     color: @shakespeare-darker-40;
+                }
+
+                .label-value {
+                    text-overflow: ellipsis;
+                    overflow: hidden;
                 }
             }
 
